deployment-cloud-provider.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: "2019-09-24T20:16:46Z"
  generation: 8
  labels:
    run: cloud-provider
  name: cloud-provider
  namespace: cloud-providers
  resourceVersion: "46840268"
  selfLink: /apis/extensions/v1beta1/namespaces/cloud-providers/deployments/cloud-provider
  uid: 3bd4bcf9-df08-11e9-a43b-42010a8000c9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: cloud-provider
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: cloud-provider
    spec:
      containers:
      - image: cristian04/clvr-cloud-providers
        imagePullPolicy: Always
        name: cloud-provider
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 5m
            memory: 5Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-09-24T20:16:46Z"
    lastUpdateTime: "2019-09-26T23:09:14Z"
    message: ReplicaSet "cloud-provider-7db48949d5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2019-09-26T23:14:49Z"
    lastUpdateTime: "2019-09-26T23:14:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
